fix z-index

--- a/src/css/components/step-form.scss
+++ b/src/css/components/step-form.scss
@@ -39,7 +39,7 @@
     opacity: 0;
     font-size: 150px;
     height: 30px;
-    z-index: 20;
+    z-index: 1;
     cursor: pointer !important;
 }
 .fileform .fileformlabel {
